[package]
name = "xiao-rp2040"
version = "0.1.0"
edition = "2021"
description = "Board Support for the Seeed XIAO RP2040"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", optional = true }
embedded-time = "0.12.1"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version = "0.4.0"}

[dev-dependencies]
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs/", rev = "fd6b6604d65a66242b52ccf7f24a95ca325991dd" }
smart-leds = "0.3.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
defmt = "0.3.1"
defmt-rtt = "0.3.2"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
